# xjtu_compiler_lab

./: readme.md
lab1/: CMakeLists.txt  dfa_config.yml  dfa_config_minimal.yml  dfa_simulator.cpp  standard_dfa_simulator.cpp  yaml_config_frontend.cpp
lab1/doc/: agile_design.md  agile_design.uxf
lab1/include/: config_frontend.h  dfa_simulator.h  yaml_config_frontend.h
lab2/: CMakeLists.txt  frontend.cpp
lab2/demo/: demo_input.txt  demo_output_flex.txt  run_demo.sh
lab2/doc/: lab2_agile_design.md  overall_arch.uxf
lab2/include/: dfa_based_lexer.cpp  dfa_based_lexer.h  dfa_model.h  lexer_interface.h  standard_dfa_simulator.cpp  standard_dfa_simulator.h  yaml_lexer_factory.cpp  yaml_lexer_factory.h
lab2/test/: dfa_based_lexer_tests.cpp  dfa_config_tests.cpp  dfa_simulator_tests.cpp  flex_based_lexer_tests.cpp  lexer_factory_tests.cpp  test_environment_setup.cpp
lab2/test/data/dfa_based_lexer/: sim_c_config.yml
lab2/test/data/dfa_config/: num_dfa_config.yml
lab2/test/data/lexer_factory/: minimal_correct_flex_backend_config.yml
lab3/: CMakeLists.txt  frontend.cpp
lab3/demo/: demo_cfg.yml  homework_8_5_cfg.yml
lab3/doc/: lab3_arch.uxf  lab3_design.md
lab3/include/: cfg_model.h  config_frontend.h  dfa_model.h  itemset_generator.cpp  itemset_generator.h  itemset_to_parsing_table.cpp  itemset_to_parsing_table.h  lr_parsing_model.cpp  lr_parsing_model.h  lr_parsing_table_generator.h  multitype_dfa_simulator.h  nfa_ctdfa_converter.h  nfa_dfa_converter.h  simple_lr_parsing_table_generator.cpp  standard_nfa_ctdfa_converter.cpp  standard_nfa_ctdfa_converter.h  standard_nfa_dfa_converter.cpp  visualization_helper.cpp  visualization_helper.h  yaml_cfg_loader.h  yaml_config_frontend.cpp  yaml_config_frontend.h
lab3/test/: itemset_generator_tests.cpp  itemset_to_parsing_table_tests.cpp  multitype_dfa_simulator_tests.cpp  simple_lr_parsing_table_generator_tests.cpp  testing_utils.cpp  testing_utils.h  visualization_helper_tests.cpp  yaml_cfg_loader_tests.cpp
lab3/test/data/itemset_to_parsing_table/: minimal_correct_cfg_with_conflict.yml
lab4/: frontend.cpp
lab4/doc/: lab4_arch.uxf  lab4_design.md  lab4_packages.uxf
lab4/include/fsm/: dfa_simulator.h  nfa_model.h  standard_nfa_dfa_converter.h  yaml_dfa_config_frontend.h
lab4/include/parsing_table/: lr_parsing_model.h  simple_lr_parsing_table_generator.h  slr1_conflict_resolver.h
lab4/src/cfg/: yaml_cfg_loader.cpp
lab4/src/fsm/: multitype_dfa_simulator.cpp  nfa_model.cpp
lab4/src/parsing_table/: itemset_generator.cpp  itemset_to_parsing_table.cpp  lr_parsing_model.cpp  slr1_conflict_resolver.cpp  slr1_parsing_table_generator.cpp
lab4/test/cfg/: cfg_analyzer_tests.cpp  yaml_cfg_loader_tests.cpp
lab4/test/parsing_table/: simple_lr_parsing_table_generator_tests.cpp  slr1_parsing_table_generator_tests.cpp
lab5/: CMakeLists.txt
lab5/demo/: demo_config.yml  homework_8_5_cfg.yml
lab5/doc/: lab5_arch.uxf  lab5_design.md  lab5_packages.uxf
lab5/include/cfg/: cfg_model.h
lab5/include/common/: testing_utils.h  visualization_helper.h
lab5/include/lexer/: flex_based_lexer.h  token_loader.h
lab5/include/parsing_table/: lr_parsing_model.h  slr1_parsing_table_generator.h
lab5/include/syntax_semantic_analyzer/: ast_model.h  scope_table.h  semantic_loader.h  syntax_semantic_analyzer.h  syntax_semantic_model.h
lab5/src/common/: testing_utils.cpp  visualization_helper.cpp
lab5/src/fsm/: standard_dfa_simulator.cpp
lab5/src/lexer/: dfa_based_lexer.cpp  token_loader.cpp  yaml_lexer_factory.cpp
lab5/src/parsing_table/: itemset_to_parsing_table.cpp  lr_parsing_model.cpp  simple_lr_parsing_table_generator.cpp  slr1_conflict_resolver.cpp
lab5/src/syntax_semantic_analyzer/: ast_model.cpp  semantic_loader.cpp  syntax_semantic_analyzer.cpp
lab5/test/common/: testing_utils.cpp  visualization_helper_tests.cpp
lab5/test/data/lexer/dfa_based_lexer/: minimal_correct_lexer_config.yml
lab5/test/data/lexer/flex_based_lexer/: minimal_correct_lexer_config.yml  sim_c_config.yml
lab5/test/data/lexer/lexer_factory/: minimal_correct_general_config.yml  minimal_incorrect_dfa_backend_config.yml  minimal_incorrect_general_and_dfa_backend_config.yml
lab5/test/data/parsing_table/lr1_parsing_table_generator/: complicated_cfg_2_with_conflict.yml
lab5/test/data/parsing_table/slr1_parsing_table_generator/: final_semantic_correction.yml
lab5/test/data/syntax_semantic_analyzer/syntax_semantic_analyzer/: final_semantic_correction.yml  minimal_semantic_incorrect_missMain_tokens.txt  simple_tokens.txt
lab5/test/lexer/: dfa_based_lexer_tests.cpp  flex_based_lexer_tests.cpp  token_loader_tests.cpp  yaml_lexer_factory_tests.cpp
lab5/test/parsing_table/: itemset_to_parsing_table_tests.cpp
lab5/test/syntax_semantic_analyzer/: scope_table_tests.cpp  semantic_loader_tests.cpp  syntax_semantic_analyzer_tests.cpp
lab6/: CMakeLists.txt  frontend.cpp
lab6/demo/: lab123.yml
lab6/doc/: lab6_design.md  lab6_packages.uxf
lab6/include/cfg/: cfg_analyzer.h  cfg_loader.h
lab6/include/common/: testing_utils.h  visualization_helper.h
lab6/include/fsm/: standard_dfa_simulator.h
lab6/include/interm_code/: interm_code_model.h
lab6/include/lexer/: dfa_based_lexer.h  lexer_factory_interface.h  lexer_interface.h  token_model.h  yaml_lexer_factory.h
lab6/include/parsing_table/: itemset_to_parsing_table.h  lr1_parsing_table_generator.h
lab6/include/syntax_semantic_analyzer/: ast_model.h  interm_code_generator.h  logical_env_simulator.h  symbol_table.h
lab6/src/cfg/: cfg_analyzer.cpp
lab6/src/common/: testing_utils.cpp  visualization_helper.cpp
lab6/src/fsm/: yaml_dfa_config_frontend.cpp
lab6/src/interm_code/: interm_code_model.cpp
lab6/src/lexer/: flex_based_lexer.cpp  token_loader.cpp
lab6/src/parsing_table/: lr1_parsing_table_generator.cpp  lr_parsing_model.cpp  slr1_parsing_table_generator.cpp
lab6/src/syntax_semantic_analyzer/: ast_interm_code_gen.cpp  ast_model.cpp  ast_representations.cpp  ast_semantic_actions.cpp  interm_code_generator.cpp  logical_env_simulator.cpp  scope_table.cpp  semantic_loader.cpp  (+3 more)
(+33 files in other folders)
